环境变量，样式的注意事项

--- a/src/app.less
+++ b/src/app.less
@@ -1,3 +1,15 @@
 .img{
-    width: 50PX;// px要大写
+    width: 50PX;// px要大写  
 }
+// id选择器不生效
+// div span {
+//     错误
+// }
+// .a > .b {
+//     不一定生效
+// }
+
+// 类选择器必须定义className
+// 自定义组件只对当前组件有效
+
+// flex布局 推荐
