--- a/blog/src/components/topicList/topic.less
+++ b/blog/src/components/topicList/topic.less
@@ -17,6 +17,7 @@
         flex-grow: 1;
         flex-direction: column;
         .topic-title,.topic-info{
+            padding-right: 15PX;
             display: flex;
             flex-direction: row;
             align-items: baseline;
@@ -31,6 +32,9 @@
                 min-width: 30PX;
                 font-style: 13PX;
 
+            }
+            .blue {
+                background-color: blue;
             }
         }
         .topic-info {
